# pico2wota

./: CMakeLists.txt  README.md  bootloader_shell.ld  main.c  standalone.ld
pico2wota_reboot/: CMakeLists.txt  reboot.c
pico2wota_reboot/include/pico2wota/: reboot.h
picowota_reboot/: reboot.c
